# digital_image_processing_homework

./: README.md
HW1/: README.md
HW1/src/: GHPF.m  homo_filter.m  img_enhance.m  main.m  my_imhist.m
HW2/: README.md
HW2/report/: 李星毅_U201712072_自实1701.md
HW2/src/: CMakeLists.txt  canny.cpp  canny.h  main.cpp  main.h
report/: 数字图像处理编程作业实验报告.md
src/: hist_dft2_display.m  im_norm.m  img_enhance.m  my_dft2.m  my_histeq.m  my_idft2.m
